--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
 .App {
   text-align: center;
+  margin: auto;
+  width: 80%;
+  padding: 8px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.fila {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.columna {
+  flex: 50%;
+  padding: 10px;
+}
+
+.carta {
+  background-color: coral;
+  width: 45%;
+  border-radius: 15px;
+}
+
+.respuesta {
+  text-align: center;
   color: white;
+  height: 1em;
+  width: 8em;
+  border: 3px solid rgba(122, 190, 62, 0.5);
+  border-radius: 10%;
+  padding: 10px;
+  margin-bottom: 10px;
+  font-size: large;
 }
 
-.App-link {
-  color: #61dafb;
+.respuesta:hover {
+  color: rgb(103, 31, 31);
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.respuestas {
+  padding-top: 20px;
+}
+
+.pregunta {
+  color: white;
+  text-align: left;
+  font-size: x-large;
+}
+
+.button {
+  top: 10%;
+  background-color: #0a0a23;
+  color: #fff;
+  border: none;
+  border-radius: 10px;
+  padding: 15px;
+  min-height: 30px;
+  min-width: 120px;
+}
+
+.h2 {
+  color: white;
 }
